# modbus-rp2040

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  main.cpp  modbus.cpp  modbus.hpp
example/: CMakeLists.txt  main.cpp
include/: modbus.hpp  modbus_data.hpp
src/: modbus.cpp  modbus_data.cpp
